# ktrace

./: .rustfmt.toml  Cargo.toml  LICENSE.mit  README.md  rust-toolchain.toml
ktrace/: Cargo.toml
ktrace-common/: Cargo.toml
ktrace-common/src/: lib.rs
ktrace-plugin/: Cargo.toml
ktrace-plugin-protocol/: Cargo.toml
ktrace-plugin-protocol/src/: lib.rs
ktrace-plugin/src/: lib.rs
ktrace-protocol/: Cargo.toml
ktrace-protocol/src/: lib.rs
ktrace/src/: app_state.rs  lib.rs  main.rs  query_client.rs  symbol_resolver.rs
ktrace/src/view/: mod.rs  primary.rs  trace_log.rs
ktrace/src/widget/: mod.rs  status_bar.rs  trace_log.rs
ktraced/: Cargo.toml
ktraced/src/: main.rs  query_server.rs
