[package]
name = "ktrace"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
ktrace-protocol.path = "../ktrace-protocol"
clap = { version = "4.5.28", features = ["derive"] }
wholesym = "0.8.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tinylfu-cached = "0.0.4"
circular-buffer = "1.0.0"
byteorder = "1.5.0"
