[package]
name = "ktraced"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
tempfile = "3.16.0"
byteorder = "1.5.0"
ktrace-plugin-protocol.path = "../ktrace-plugin-protocol"
ktrace-protocol.path = "../ktrace-protocol"
